tests/errors/syn_switch5.java
public class syn_switch5 {
public static void main(String[] args){
switch ( args.length {
 
}
}
}